# Anna-Roma-Public-Projects

./: README.md
Messaging Application/: README.md
Messaging Application Rust/manuali/: Manuali.html
Messaging Application Rust/ruggine_application/: Cargo.toml
Messaging Application Rust/ruggine_application/client/: Cargo.toml
Messaging Application Rust/ruggine_application/protocol/: Cargo.toml
Messaging Application/manuali/: analisi_dati.m
Messaging Application/ruggine_application/server/: Cargo.toml
Messaging Application/ruggine_application/server/src/: main.rs
Modeling and control of CPS/Project_part1/: Q_ring.mat  Q_star.mat  dynamic_CPS_data.mat  localization_data.mat  task1.m  task2.m  task3.m  task4.m  task5.m  tracking_data.mat
Modeling and control of CPS/Project_part2/: Node_wLocalObserver.slx  Node_wObserver.slx  README.md  SVFB.slx  SVFB_LocalObserver.slx  closed_loop_dynamics.m  closed_loop_local_observer.m  closed_loop_observer.m  main.m
Modeling and control of CPS/Project_part2/clusters/: cluster_sim_finalTopology.m  cluster_sim_topologies.m  plot_cluster_sim.m  sim_allInput_topology3.mat  sim_allInput_topology4.mat  sim_sinInput_topologies.mat
Modeling and control of CPS/Project_part2/notclean/: SVFB_LocalObserver_notclean.slx  SVFB_notclean.slx
Pac-Man game/: LICENSE
Pac-Man game/12_sample_GLCD_TP - parte 2/: sample.uvoptx
Robot_Walking/: requirements.txt  train.py
Robot_Walking/Media/: Simulation1.webm  Simulation2.webm  Simulation3.webm
Robot_Walking/env/: custom_hopper.py
Robot_Walking/env/assets/: Mountain.stl  (+4 more)
(+19 files in other folders)
