[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
protocol = { path = "../protocol" }
chrono = { version = "0.4.41", features = ["serde"] }
eframe = "0.27"
sysinfo = "0.30"
